# serio

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  TODO.md  USAGE.md  serio.h  tests.cpp
3rd/rapidxml/rapidxml/: rapidxml_print.hpp
docs/: Doxyfile  conf.py  index.rst  introduction.rst  requirements.txt
src/serio/: base.h  binary.h  boost.h  config.h.in  json.h  qt.h  serio.cpp  serio.h  tools.h  xml.h
test/: main.cpp  tests.cpp
tests/: tests.cpp
tests/cereal/: array.cpp  array.h  atomic.cpp  atomic.h  basic_string.cpp  basic_string.h  bitset.cpp  bitset.h  chrono.cpp  chrono.h  common.h  complex.cpp  complex.h  defer.cpp  defer.h  deque.cpp  deque.h  forward_list.cpp  forward_list.h  list.cpp  list.h  load_construct.cpp  load_construct.h  map.cpp  map.h  memory.cpp  memory.h  memory_cycles.cpp  memory_cycles.h  multimap.cpp  multimap.h  multiset.cpp  multiset.h  optional.cpp  optional.h  pair.cpp  pair.h  pod.cpp  pod.h  polymorphic.cpp  (+40 more)
tests/serio/: common.h  test_adapters.cpp  test_api.cpp  test_associative.cpp  test_binary_adapters.cpp  test_binary_associative.cpp  test_binary_fundamental.cpp  test_binary_optional_variant.cpp  test_binary_pair_tuple.cpp  test_binary_sequences.cpp  test_binary_smartptr.cpp  test_binary_strings.cpp  test_binary_utility.cpp  test_binary_vector.cpp  test_binary_views.cpp  test_boost.cpp  test_custom_types.cpp  test_errors.cpp  test_fundamental.cpp  test_interchangeable.cpp  test_json.cpp  test_nested.cpp  test_nvp.cpp  test_options.cpp  test_qt.cpp  test_sequences.cpp  test_serio_helpers.cpp  test_strings.cpp  test_utility.cpp  test_xml.cpp
tests/stress/: array.cpp  boost.cpp  helper.h  map.cpp  other.cpp  qt.cpp
